b=142513 r=kmmclusk sr=waterson  Fixed blue text, used correct type for calculation.